fixed dropdown with categories on mobile

--- a/src/app/components/all-categories/all-categories.component.scss
+++ b/src/app/components/all-categories/all-categories.component.scss
@@ -13,10 +13,18 @@ button {
 }
 
 .dropdown {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 15px; 
   button {
     font-size: 20px;
     font-weight: bold;
     color: #3273dc;
     margin: 0 auto;
+  }
+  &-menu {
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
